# efes_prj

./: .gitignore  .gitmodules  README.md
doc/: acronyms.tex  main.tex  motor_bd.vrt  packages.tex  ref.bib
doc/code/: ps2_RX.asm  ps2_TX.asm  uart_RX.asm
doc/doxy/: Doxyfile  run.sh
doc/gfx/: BStepper_run.eps  GPIOHeader.eps  MotionPattern_DIRTY.eps  MotionPattern_ERASED.eps  MotionPattern_TOERASE.eps  MotionPattern_WRITTEN.eps  NodeTable.eps  OFileTable.eps  PushButton_fsm.eps  SSegDisplay_fsm.eps  Translator_states.eps  display_peripheral.eps  fifo.eps  motor_board.eps  ps2_asm.eps  ps2_dp.eps  ps2_peripheral_spi_wrapper.eps  ps2_timing_rx.eps  ps2_timing_tx.eps  spi_controller.eps  spi_slave.eps  spi_timing_cpha0.eps  spi_timing_cpha1.eps  system_diagram.eps  uart_rx_asm.eps  uart_rx_dp.eps
doc/report/: acronyms.tex  macros.tex  main.tex  packages.tex  ref.bib  run.sh  software_design.tex  system_design.tex
fpga/: run.sh
fpga/eda/: build.tcl  efes_prj.sdc  gen_prj.tcl  pin_assignments.tcl
fpga/hdl/rtl/: efes_prj.sv  math.svh  ps2_controller.sv  ps2_dp.sv  ps2_fsm.sv  ps2_peripheral_spi_wrapper.sv  ps2_pkg.sv  shift_reg.sv  spi_slave.sv  uart_rx.sv  up_counter.sv
fpga/hdl/tb/: tb_sa_sc_fifo.sv  tb_spi_slave.sv  tb_utils_pkg.sv
fw/: CMakeLists.txt  stm32f401xe.ld
fw/cmake/: arm-none-eabi.cmake  armv7em-hard-fpv4sp.cmake  cmsis.cmake  littlefs.cmake  sdk.cmake  stm32_hal.cmake
fw/core/inc/: HwAlarm.hpp  PushButton.h  PushButton.hpp  PushButton.tpp  TimeBase.h  core.h  gpio.h  main.h  stm32f4xx_utils.h  tim.h  usart.h  utils.hpp
fw/core/inc/BStepper/: BStepper.h  PhaseCurrent.h  Translator.h
fw/core/inc/Common/: CallbackUtils.hpp  FifoArray.hpp  debug.h  dma.h  eventpoll.h  exti.h  flash.h  gpio.h  poll.h  spi.h  tim.h  types.h
fw/core/inc/FileManager/: FileManager.hpp  FileManager.tpp  IFile.h
fw/core/inc/HwAlarm/: HwAlarm.hpp  HwAlarm.tpp
fw/core/inc/Keyboard/: KeyMapper.hpp  KeyMapper.tpp  Keyboard.hpp  Keyboard.tpp  ScanCodeParser.h  UniKey.h
fw/core/inc/LTC2308/: LTC2308.hpp  LTC2308.tpp
fw/core/inc/MotionPattern/: MotionPattern.hpp  MotionPattern.tpp
fw/core/inc/PushButton/: PushButton.hpp  PushButton.tpp
fw/core/inc/SSegDisplay/: SSegDisplay.hpp  SSegDisplay.tpp
fw/core/inc/SpiMaster/: SpiMaster.hpp  SpiMaster.tpp
fw/core/inc/UartTx/: UartTx.hpp  UartTx.tpp
fw/core/src/: PushButton.cpp  TimeBase.c  core.c  exti.cpp  gpio.c  handlers.cpp  main.c  main.cpp  startup_stm32f401xe.c  startup_stm32f401xe.cpp  stm32f4xx_utils.c  syscalls.c  syscalls.cpp  usart.cpp
fw/core/src/BStepper/: BStepper.cpp  Translator.cpp
fw/core/src/Common/: dma.cpp  exti.cpp  flash.cpp  gpio.cpp  spi.cpp  tim.cpp
fw/core/src/Keyboard/: ScanCodeParser.cpp
fw/sys/inc/: FileManager.hpp  FileManager.tpp  IFile.h  UartTx.h  UartTx.hpp  UartTx.tpp  debug.h
fw/sys/src/: IFile.cpp  UartTx.cpp  startup_stm32f401xe.c  syscalls.c
src/rtl/: arst_sync.sv  math.svh  ps2_controller.sv  ps2_dp.sv  ps2_fsm.sv  ps2_peripheral_spi_wrapper.sv  ps2_pkg.sv  sa_sc_fifo.sv  spi_slave.sv  timer.sv  uart_rx.sv  uart_rx_fsm.sv  uart_sseg_peripheral.sv
src/tb/: tb_fifo_pkg.sv  tb_ps2_controller.sv  tb_ps2_controller_errors.sv  tb_ps2_controller_pkg.sv  tb_ps2_device_pkg.sv  tb_ps2_peripheral_spi_wrapper.sv  tb_sa_sc_fifo.sv  tb_spi.sv  tb_spi_master_pkg.sv  tb_spi_slave.sv  tb_uart_rx.sv  tb_uart_sseg_peripheral.sv  tb_uart_tx_pkg.sv  tb_utils_pkg.sv
